# autoinvoice

./: .dockerignore  .env.example  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  chore.md  docs.md  epic.md  feature.md  research.md  test.md
docs/: BPMN.drawio  LOGGING.md  LOGGING_IMPLEMENTATION_SUMMARY.md  QUICK_START_LOGGING.py  SETTINGS.md  SETTINGS_DOCUMENTATION_SUMMARY.md  UV_RUFF_GUIDE.md  v0.1.md
docs/adr/: 1-adr_devcontainer_docker.md  2-adr_uv_ruff.md  3-adr_initial_dependencies.md  4-adr_pydantic_settings.md  5-adr_logging_foundation.md  adr_template.md  index.md
docs/logging/: LOGGING.md  LOGGING_IMPLEMENTATION_SUMMARY.md  QUICK_START_LOGGING.py
docs/settings/: SETTINGS.md  SETTINGS_DOCUMENTATION_SUMMARY.md
examples/: fastapi_example.py  logging_examples.py  settings_examples.py
src/: __init__.py
src/api/: __init__.py  middleware.py
src/config/: __init__.py  logging_config.py  settings.py
src/models/: __init__.py
src/services/: __init__.py
src/utils/: __init__.py  logger.py
